📱 Add responsive menu

--- a/src/localizations/de.json
+++ b/src/localizations/de.json
@@ -2,6 +2,8 @@
   "gallery": {
     "title": "Galerie"
   },
+  "select_language": "Wählen Sie eine Sprache",
+  "menu": "Menü",
   "goto_main_content": "Zum Hauptinhalt gehen",
   "members": {
     "title": "Das Team",
