✨ Sort members per role

--- a/src/localizations/de.json
+++ b/src/localizations/de.json
@@ -7,7 +7,7 @@
   "goto_main_content": "Zum Hauptinhalt gehen",
   "members": {
     "title": "Das Team",
-    "page_title": "Gewählte Mitglieder der DIVA",
+    "page_title": "Gewählte Mitglieder",
     "roles": {
       "president": "Vorsitzender",
       "vice_president": "stellvertretender Vorsitzender",
