--- a/src/localizations/fr.json
+++ b/src/localizations/fr.json
@@ -7,7 +7,7 @@
   "goto_main_content": "Aller au contenu principal",
   "members": {
     "title": "L'équipe",
-    "page_title": "Membres élus de la DIVA",
+    "page_title": "Membres élus",
     "roles": {
       "president": "Président",
       "vice_president": "Vice-Président",
