--- a/src/localizations/fr.json
+++ b/src/localizations/fr.json
@@ -5,6 +5,10 @@
   "select_language": "Sélectionner un language",
   "menu": "Menu",
   "goto_main_content": "Aller au contenu principal",
+  "home": {
+    "diva_title": "L’association étudiante de l’ISFATES",
+    "welcome": "Bienvenue sur le site de la DIVA"
+  },
   "members": {
     "title": "L'équipe",
     "page_title": "Membres élus",
